--- a/server/templates/build.html
+++ b/server/templates/build.html
@@ -16,7 +16,7 @@
 var ws = new WebSocket({{url "LogOutput" .Job .Build | js}});
 
 ws.onmessage = function(event) {
-  document.getElementById("build-log").innerHTML += ansi_up.ansi_to_html(event.data);
+  document.getElementById("build-log").innerHTML += ansi_up.ansi_to_html(event.data, { use_classes: true });
 };
 </script>
 {{end}}
