--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>{{template "title" .}}</title>
+    <link href="{{url "Public" "main.css"}}" media="all" rel="stylesheet" type="text/css" />
   </head>
   <body>
     {{template "body" .}}
