--- a/server/templates/build.html
+++ b/server/templates/build.html
@@ -10,13 +10,11 @@
 <pre id="build-log">
 </pre>
 
-<script src="{{url "Public" "ansi_up.js" | html}}" type="text/javascript"></script>
-
 <script type="text/javascript">
 var ws = new WebSocket({{url "LogOutput" .Job .Build | js}});
 
 ws.onmessage = function(event) {
-  document.getElementById("build-log").innerHTML += ansi_up.ansi_to_html(event.data, { use_classes: true });
+  document.getElementById("build-log").innerHTML += event.data
 };
 </script>
 {{end}}
