--- a/server/public/main.css
+++ b/server/public/main.css
@@ -12,6 +12,12 @@ pre {
   padding: 1em;
 }
 
+#autoscroll-toggle {
+	position: absolute;
+	top: 1em;
+	right: 1em;
+}
+
 .ansi-bold { font-weight: bold; }
 
 body { background: #222222; color: #dfeee0; }
