--- a/server/templates/build.html
+++ b/server/templates/build.html
@@ -10,35 +10,9 @@
 <pre id="build-log">
 </pre>
 
-<a id="autoscroll-toggle" href="#">turn autoscroll on</a>
-
 <script src="{{url "Public" "jquery-2.1.1.min.js"}}"></script>
+<script src="{{url "Public" "build.js"}}"></script>
 <script type="text/javascript">
-var ws = new WebSocket("ws://" + window.location.hostname + {{url "LogOutput" .Job .Build | js}});
-
-ws.onmessage = function(event) {
-  document.getElementById("build-log").innerHTML += event.data
-};
-
-$(document).ready(function() {
-	var autoscroll = false;
-
-	$("#autoscroll-toggle").on("click", function() {
-		autoscroll = !autoscroll;
-		console.log("autoscroll is now: " + autoscroll)
-		if (autoscroll) {
-			$("#autoscroll-toggle").text("turn autoscroll off")
-		} else {
-			$("#autoscroll-toggle").text("turn autoscroll on")
-		}
-		return false;
-	});
-
-	setInterval(function() {
-		if (autoscroll) {
-			$(document).scrollTop($(document).height());
-		}
-	}, 10)
-});
+streamLog("ws://" + window.location.hostname + {{url "LogOutput" .Job .Build | js}})
 </script>
 {{end}}
