indicate job/build status on their pages

--- a/server/public/main.css
+++ b/server/public/main.css
@@ -24,6 +24,113 @@ body { background: #222222; color: #dfeee0; }
 
 a { color: #6a9eef; }
 
+form.trigger-build input {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: block;
+  border: none;
+  font-family: inherit;
+  font-weight: bold;
+  color: #e0cfc0;
+  font-size: 2em;
+  cursor: pointer;
+  padding: 0.25em 0.5em;
+  background: transparent;
+}
+
+form.trigger-build input:hover {
+  background: #453c31;
+}
+
+ul.jobs {
+  margin: 1em 0 0 0;
+  padding: 0;
+}
+
+ul.jobs li {
+  list-style: none;
+}
+
+ul.jobs li a {
+  float: left;
+  font-size: 4em;
+  display: block;
+  padding: 0.25em 0.5em;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+ul.builds {
+  margin: 1em 0 0 0;
+  padding: 0;
+}
+
+ul.builds li {
+  float: left;
+  list-style: none;
+}
+
+ul.builds li a {
+  width: 3em;
+  font-size: 2em;
+  text-align: center;
+  padding: 0.5em;
+  display: block;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+ul.jobs li a:hover,
+ul.builds li a:hover {
+  background: #453c31;
+}
+
+ul.jobs li.succeeded a,
+ul.builds li.succeeded a {
+  color: #8cb287;
+}
+
+ul.jobs li.failed a,
+ul.builds li.failed a {
+  color: #d36764;
+}
+
+ul.jobs li.pending a,
+ul.builds li.pending a {
+  color: #5d4c4c;
+}
+
+ul.jobs li.errored a,
+ul.builds li.errored a {
+  color: #e1bc8e;
+}
+
+ul.jobs li.started a,
+ul.builds li.started a {
+  color: #ebb263;
+}
+
+ul.jobs li.started a {
+  -webkit-animation: wiggle-job 0.5s infinite;
+}
+
+ul.builds li.started a {
+  -webkit-animation: wiggle-build 0.5s infinite;
+}
+
+@-webkit-keyframes wiggle-job {
+  0% { -webkit-transform: rotate(1deg); }
+  50% { -webkit-transform: rotate(-1deg); }
+  100% { -webkit-transform: rotate(1deg); }
+}
+
+@-webkit-keyframes wiggle-build {
+  0% { -webkit-transform: rotate(10deg); }
+  50% { -webkit-transform: rotate(-10deg); }
+  100% { -webkit-transform: rotate(10deg); }
+}
+
 ::selection { background: #555555; color: #ffffff; }
 
 .black, .ansi-black-fg { color: #453c31; }
