--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -3,7 +3,7 @@
 {{define "body"}}
 <ul class="jobs">
   {{range .Jobs}}
-  <li class="{{.CurrentBuild.Status}}"><a href="{{url "GetJob" .Job}}">{{.Job.Name}}</a></li>
+  <li class="{{.CurrentBuild.Status}}"><a href="{{url "GetBuild" .Job .CurrentBuild}}">{{.Job.Name}}</a></li>
   {{end}}
 </ul>
 {{end}}
