--- a/server/templates/build.html
+++ b/server/templates/build.html
@@ -6,6 +6,7 @@
     <input type="submit" value="trigger build" />
   </form>
 
+  <a class="title" href="/">&lt;</a>
   <h1>{{.Job.Name}} #{{.Build.ID}}</h1>
 </div>
 
