Revert "default nodes/edges to empty arrays"
this is redundant

This reverts commit b65e2a0e583e1edb3c630fac41957128eeca8528.

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -17,7 +17,7 @@
 <script>
 $(document).ready(function() {
   $("ul.jobs").remove();
-  draw({{.Nodes}} || [], {{.Edges}} || []);
+  draw({{.Nodes}}, {{.Edges}});
 })
 </script>
 {{end}}
