fix page titles

--- a/server/templates/build.html
+++ b/server/templates/build.html
@@ -1,4 +1,4 @@
-{{define "title"}}{{.Job.Name}} #{{.Build.ID}} - Winston{{end}}
+{{define "title"}}{{.Job.Name}} #{{.Build.ID}} - Concourse{{end}}
 
 {{define "body"}}
 <div id="build-header">
