--- a/server/public/main.css
+++ b/server/public/main.css
@@ -208,9 +208,9 @@ a { color: #6a9eef; }
 }
 
 @-webkit-keyframes wiggle-build {
-  0% { -webkit-transform: rotate(5deg); }
-  50% { -webkit-transform: rotate(-5deg); }
-  100% { -webkit-transform: rotate(5deg); }
+  0% { -webkit-transform: rotate(1deg); }
+  50% { -webkit-transform: rotate(-1deg); }
+  100% { -webkit-transform: rotate(1deg); }
 }
 
 #metadata {
@@ -306,17 +306,16 @@ svg h1 a {
   text-decoration: none;
 }
 
-svg .node rect {
-  fill: #111;
+svg .node div {
+  background-color: #111;
 }
 
-svg .node.job.succeeded rect { fill: #8cb287; }
-svg .node.job.failed rect { fill: #d36764; }
-svg .node.job.pending rect { fill: #5d4c4c; }
-svg .node.job.errored rect { fill: #e1bc8e; }
-svg .node.job.aborted rect { fill: #d25f3a; }
-svg .node.job.started rect { fill: #ebb263; }
-svg .node.job.started { -webkit-animation: wiggle-build 0.5s infinite; }
+svg .node.job.succeeded div { background-color: #8cb287; }
+svg .node.job.failed div { background-color: #d36764; }
+svg .node.job.pending div { background-color: #5d4c4c; }
+svg .node.job.errored div { background-color: #e1bc8e; }
+svg .node.job.aborted div { background-color: #d25f3a; }
+svg .node.job.started div { background-color: #ebb263; -webkit-animation: wiggle-build 0.5s infinite; }
 
 .edgeLabel rect {
   fill: none;
