automatically trigger builds once again
this is now done via a process that simply polls the database on a short
interval, looking for new sets of inputs for a build.

serial job execution is preserved; the same interval that looks for new inputs
looks for pending builds and keeps trying to trigger them.

overall this replaces a bunch of complicated scheduling logic.

--- a/server/templates/build.html
+++ b/server/templates/build.html
@@ -28,7 +28,7 @@
 
 <div id="build-body">
   <div id="metadata">
-    {{range .Build.Inputs}}
+    {{range .Inputs}}
     <div class="build-source">
       <h3>{{.Name}}</h3>
       <dl class="build-metadata">
