--- a/server/public/main.css
+++ b/server/public/main.css
@@ -235,20 +235,27 @@ li.started {
   padding: 1em;
 }
 
-#metadata h3 {
+.build-metadata {
+  padding: 1em;
+}
+
+#metadata h3,
+.build-metadata h3 {
   background: #111;
   padding: .25em .5em;
   margin-top: 0;
 }
 
-#metadata dt {
+#metadata dt,
+.build-metadata dt {
   width: 10em;
   display: inline-block;
   float: left;
   text-align: right;
 }
 
-#metadata dd {
+#metadata dd,
+.build-metadata dd {
   white-space: pre;
   margin-left: 11em;
 }
@@ -273,24 +280,15 @@ li.started {
   vertical-align: top;
 }
 
-#version-history td dl.jobs dt {
-  float: left;
-  text-align: right;
-  width: 100px;
-  font-size: 16px;
-  line-height: 1em;
-  text-align: right;
-  margin: 0;
-  padding: 7px;
-  display: block;
-  font-weight: bold;
-  text-decoration: none;
-  color: #fff;
+#version-history table.jobs td {
+  border: 0;
+  padding: 10px 10px 0;
+  vertical-align: middle;
 }
 
-#version-history td dl.jobs dd {
-  margin-left: 124px;
-  height: 3em;
+#version-history table.jobs h3 {
+  margin: 0;
+  text-align: right;
 }
 
 ::selection { background: #555555; color: #ffffff; }
